--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ h4 {
   animation-range: entry 0% ;
 }
 .carousel{
-  background-color: rgba(67, 67, 67, 0.099);
+  background-color: rgb(25, 25, 25);
   background-size: cover;
   width: 100%;
   height: 100vh;
