--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h4 {
 }
 
 .second  p{
-  font-family: Arial, sans-serif;
+  font-family: "Playball", cursive;
   font-size: 18px;
   line-height: 35px;
   width: 340px;
